--- a/SampleSolution.Web/package.json
+++ b/SampleSolution.Web/package.json
@@ -33,7 +33,7 @@
     "@types/react": "=16.3.13",
     "@types/react-dom": "=16.0.5",
     "@types/react-router-dom": "=4.2.6",
-    "@types/reflect-metadata": "=0.1.0",
+    "@types/react-tap-event-plugin": "=0.0.30",
     "browser-sync": "=2.24.1",
     "browserify": "=16.2.0",
     "browserify-casesensitiverequire": "=1.0.1",
@@ -68,6 +68,7 @@
     "node-fetch": "=2.1.2",
     "node-lessify": "=0.1.5",
     "react-table": "=6.8.2",
+    "reflect-metadata": "=0.1.12",
     "require-dir": "=1.0.0",
     "selenium-webdriver": "=4.0.0-alpha.1",
     "stringify": "=5.2.0",
