add account controller

--- a/SampleSolution.Backend/appsettings.json
+++ b/SampleSolution.Backend/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "MainDBConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication1-15D48C31-E8C8-4CAA-81B1-8B36EF112ED6;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "MainDBConnection": "User ID=root;Password=myPassword;Host=localhost;Port=5432;Database=myDataBase;",
+        "AuthDBConnection": "User ID=root;Password=myPassword;Host=localhost;Port=5432;Database=authDataBase;"
     },
     "Logging": {
         "IncludeScopes": false,
