--- a/SampleSolution.Backend/appsettings.json
+++ b/SampleSolution.Backend/appsettings.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
-        "MainDBConnection": "User ID=root;Password=myPassword;Host=localhost;Port=5432;Database=myDataBase;",
-        "AuthDBConnection": "User ID=root;Password=myPassword;Host=localhost;Port=5432;Database=authDataBase;"
+        "MainDbConnection": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=postgres;Pooling=true;",
+        "AuthDbConnection": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=postgres;Pooling=true;"
     },
     "Logging": {
         "IncludeScopes": false,
