--- a/SampleSolution.Backend/appsettings.json
+++ b/SampleSolution.Backend/appsettings.json
@@ -4,9 +4,9 @@
         "AuthDbConnection": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=postgres;Pooling=true;"
     },
     "Logging": {
-        "IncludeScopes": false,
         "LogLevel": {
             "Default": "Warning"
         }
-    }
+    },
+    "AllowedHosts": "*"
 }
