--- a/SampleSolution.Backend/Properties/launchSettings.json
+++ b/SampleSolution.Backend/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "SampleSolution.Backend": {
             "commandName": "Project",
             "launchBrowser": true,
-            "applicationUrl": "http://0.0.0.0:30102/",
+            "applicationUrl": "https://0.0.0.0:30103/;http://0.0.0.0:30102/",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
