--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build SampleSolution.Backend --configuration Release --no-restore
+      run: dotnet build --configuration Release --no-restore ./SampleSolution.Backend
     - name: Test
       run: dotnet test --no-restore --verbosity normal
