--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -18,8 +18,11 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
+      working-directory: SampleSolution.Backend
       run: dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore ./SampleSolution.Backend
+      working-directory: SampleSolution.Backend
+      run: dotnet build --configuration Release --no-restore
     - name: Test
+      working-directory: SampleSolution.Backend
       run: dotnet test --no-restore --verbosity normal
