--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -18,8 +18,7 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
-      working-directory: SampleSolution.Backend
-      run: dotnet restore
+      run: dotnet restore ./SampleSolution.Backend
     - name: Build
       working-directory: SampleSolution.Backend
       run: dotnet build --configuration Release --no-restore
