--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -26,3 +26,9 @@ jobs:
     - name: Test
       working-directory: Backends/SampleSolution.Backend
       run: dotnet test --no-restore --verbosity normal
+    - uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: labeg/csharp-qss-backend
+        tags: latest
