--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -27,6 +27,7 @@ jobs:
       working-directory: Backends/SampleSolution.Backend
       run: dotnet test --no-restore --verbosity normal
     - uses: docker/build-push-action@v1
+      working-directory: Backends/SampleSolution.Backend
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
