--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -26,7 +26,8 @@ jobs:
     - name: Test
       working-directory: Backends/SampleSolution.Backend
       run: dotnet test --no-restore --verbosity normal
-    - uses: docker/build-push-action@v1
+    - name: Deploy
+      uses: docker/build-push-action@v1
       working-directory: Backends/SampleSolution.Backend
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
