--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -18,19 +18,19 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
-      working-directory: Backends/SampleSolution.Backend
+      working-directory: ./Backends/SampleSolution.Backend
       run: dotnet restore
     - name: Build
-      working-directory: Backends/SampleSolution.Backend
+      working-directory: ./Backends/SampleSolution.Backend
       run: dotnet build --configuration Release --no-restore
     - name: Test
-      working-directory: Backends/SampleSolution.Backend
+      working-directory: ./Backends/SampleSolution.Backend
       run: dotnet test --no-restore --verbosity normal
     - name: Deploy
       uses: docker/build-push-action@v1
+      working-directory: ./Backends/SampleSolution.Backend
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: labeg/csharp-qss-backend
         tags: latest
-      working-directory: Backends/SampleSolution.Backend
