--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -21,8 +21,10 @@ jobs:
       working-directory: ./Backends/SampleSolution.Backend
       run: dotnet restore
     - name: Build
+      working-directory: ./Backends/SampleSolution.Backend
       run: dotnet build --configuration Release --no-restore
     - name: Test
+      working-directory: ./Backends/SampleSolution.Backend
       run: dotnet test --no-restore --verbosity normal
     - name: Deploy
       uses: docker/build-push-action@v1
