--- a/Backends/SampleSolution.Backend/Dockerfile
+++ b/Backends/SampleSolution.Backend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 ENV ASPNETCORE_URLS=http://0.0.0.0:30102
 EXPOSE 30102
 
+RUN ls -lah
+
 RUN ln -snf /usr/share/zoneinfo/Europe/Moscow /etc/localtime && echo Europe/Moscow > /etc/timezone
 COPY ${source:-bin/Release/netcoreapp3.1/publish} .
 ENTRYPOINT ["dotnet", "SampleSolution.Backend.dll"]
