--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Testttttt
+      run: docker run --rm hello-world
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
@@ -26,8 +28,6 @@ jobs:
     - name: Test
       working-directory: ./Backends/SampleSolution.Backend
       run: dotnet test --no-restore --verbosity normal
-    - name: Testtttt
-      run: docker -v
     - name: Deploy
       uses: docker/build-push-action@v1
       with:
