--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: gggggggg
+      run: docker run --rm -v ${PWD}:/app -v /var/run/docker.sock:/var/run/docker.sock hello-world
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
