--- a/.github/workflows/sample-solution.backend.yml
+++ b/.github/workflows/sample-solution.backend.yml
@@ -13,24 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.101
-    - name: Install dependencies
-      working-directory: ./Backends/SampleSolution.Backend
-      run: dotnet restore
-    - name: Build
-      working-directory: ./Backends/SampleSolution.Backend
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      working-directory: ./Backends/SampleSolution.Backend
-      run: dotnet test --no-restore --verbosity normal
-    - name: Deploy
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: labeg/csharp-qss-backend
-        tags: latest
-        path: ./Backends/SampleSolution.Backend
+    - name: Build backend
+      run: ./ci/build.sh
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      
