--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -6,22 +6,22 @@
   "private": true,
   "browserify-shim": {},
   "dependencies": {
-    "@labeg/webapp-core": "=0.1.49",
-    "@labeg/alertify.js": "=2.0.32",
+    "@labeg/alertify.js": "=2.0.36",
+    "@labeg/webapp-core": "=0.1.53",
     "abortcontroller-polyfill": "=1.4.0",
     "class-validator": "=0.12.2",
     "classnames": "=2.2.6",
     "core-js": "=3.6.5",
-    "first-di": "=0.1.15",
+    "first-di": "=0.1.19",
     "gridlex": "=2.7.1",
-    "material-ui": "=0.20.2",
     "imask": "=6.0.5",
+    "material-ui": "=0.20.2",
     "react": "=16.13.1",
     "react-dom": "=16.13.1",
     "react-router": "=5.2.0",
     "react-router-dom": "=5.2.0",
     "react-virtualized": "=9.21.2",
-    "ts-serializable": "=2.0.10",
+    "ts-serializable": "=2.0.14",
     "tslib": "=2.0.0",
     "whatwg-fetch": "=3.0.0"
   },
@@ -41,7 +41,7 @@
     "@babel/plugin-transform-unicode-regex": "=7.10.1",
     "@babel/runtime": "=7.10.2",
     "@csstools/postcss-sass": "=4.0.0",
-    "@labeg/code-style": "=1.0.61",
+    "@labeg/code-style": "=1.0.68",
     "@types/chai": "=4.2.11",
     "@types/classnames": "=2.2.10",
     "@types/core-js": "=2.5.3",
@@ -55,6 +55,7 @@
     "autoprefixer": "=9.8.0",
     "chai": "=4.2.0",
     "concurrently": "=5.2.0",
+    "connect-history-api-fallback": "=1.6.0",
     "copyfiles": "=2.3.0",
     "cssnano": "=4.1.10",
     "html-minifier": "=4.0.0",
