--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 # Other
 .vscode/
 **/node_modules/**
-Clients/SampleSolution.Web/wwwroot/
-Clients/SampleSolution.Web/wwwroot.tmp/
+Clients/SampleSolution.Web/wwwroot
+Clients/SampleSolution.Web/wwwroot.tmp
 
 # User-specific files
 *.suo
