--- a/Clients/SampleSolution.Web/tsconfig.json
+++ b/Clients/SampleSolution.Web/tsconfig.json
@@ -33,7 +33,8 @@
   },
   "include": [
     "wwwrootsrc/**/*",
-    "test/**/*"
+    "test/**/*",
+    "typings/index.d.ts"
   ],
   "exclude": [
   ]
