--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -120,7 +120,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "node ./buildscripts/write-task-name.js",
+      "commit-msg!": "node ./buildscripts/write-task-name.js",
       "pre-commit": "npm run pre-test"
     }
   },
