--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -6,13 +6,13 @@
   "private": true,
   "browserify-shim": {},
   "dependencies": {
-    "@labeg/alertify.js": "=2.0.36",
-    "@labeg/webapp-core": "=0.1.53",
+    "@labeg/alertify.js": "=2.0.41",
+    "@labeg/webapp-core": "=0.1.58",
     "abortcontroller-polyfill": "=1.4.0",
     "class-validator": "=0.12.2",
     "classnames": "=2.2.6",
     "core-js": "=3.6.5",
-    "first-di": "=0.1.19",
+    "first-di": "=0.1.24",
     "gridlex": "=2.7.1",
     "imask": "=6.0.5",
     "material-ui": "=0.20.2",
@@ -21,7 +21,7 @@
     "react-router": "=5.2.0",
     "react-router-dom": "=5.2.0",
     "react-virtualized": "=9.21.2",
-    "ts-serializable": "=2.0.14",
+    "ts-serializable": "=2.0.19",
     "tslib": "=2.0.0",
     "whatwg-fetch": "=3.0.0"
   },
@@ -41,7 +41,7 @@
     "@babel/plugin-transform-unicode-regex": "=7.10.1",
     "@babel/runtime": "=7.10.2",
     "@csstools/postcss-sass": "=4.0.0",
-    "@labeg/code-style": "=1.0.68",
+    "@labeg/code-style": "=1.0.73",
     "@types/chai": "=4.2.11",
     "@types/classnames": "=2.2.10",
     "@types/core-js": "=2.5.3",
@@ -51,7 +51,6 @@
     "@types/react": "=16.9.35",
     "@types/react-dom": "=16.9.8",
     "@types/react-router-dom": "=5.1.5",
-    "@types/react-tap-event-plugin": "=0.0.30",
     "autoprefixer": "=9.8.0",
     "chai": "=4.2.0",
     "concurrently": "=5.2.0",
@@ -66,11 +65,11 @@
     "node-sass": "=4.14.1",
     "postcss-cli": "=7.1.1",
     "postcss-scss": "=2.1.1",
-    "replace-in-file": "=6.0.0",
-    "rollup": "=2.13.1",
+    "replace-in-file": "=6.1.0",
+    "rollup": "=2.14.0",
     "rollup-plugin-babel": "=4.4.0",
-    "rollup-plugin-commonjs": "=10.1.0",
-    "rollup-plugin-node-resolve": "=5.2.0",
+    "@rollup/plugin-commonjs": "=13.0.0",
+    "@rollup/plugin-node-resolve": "=8.0.1",
     "rollup-plugin-replace": "=2.2.0",
     "rollup-plugin-string": "=3.0.0",
     "rollup-plugin-terser": "=6.1.0",
