--- a/Clients/SampleSolution.Web/tsconfig.json
+++ b/Clients/SampleSolution.Web/tsconfig.json
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "jsx": "react",
     "lib": [
-      "ES2017",
+      "ES2015",
       "DOM",
       "DOM.Iterable",
       "ScriptHost"
@@ -37,5 +37,6 @@
     "typings/index.d.ts"
   ],
   "exclude": [
+    "wwwrootsrc/core/scripts/pwa.serviceworker.ts"
   ]
 }
