--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -52,6 +52,7 @@
     "@types/react-dom": "=16.9.8",
     "@types/react-router-dom": "=5.1.5",
     "autoprefixer": "=9.8.0",
+    "browser-sync": "=2.26.7",
     "chai": "=4.2.0",
     "concurrently": "=5.2.0",
     "connect-history-api-fallback": "=1.6.0",
@@ -66,7 +67,7 @@
     "postcss-cli": "=7.1.1",
     "postcss-scss": "=2.1.1",
     "replace-in-file": "=6.1.0",
-    "rollup": "=2.14.0",
+    "rollup": "=2.15.0",
     "rollup-plugin-babel": "=4.4.0",
     "@rollup/plugin-commonjs": "=13.0.0",
     "@rollup/plugin-node-resolve": "=8.0.1",
