--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -98,9 +98,11 @@
     "serve:bundle_cabinete_es5": "rollup --config --watch --environment NODE_ENV:development,APP:Cabinet_es5",
     "serve:bundle_admin_es2015": "rollup --config --watch --environment NODE_ENV:development,APP:Admin_es2015",
     "serve:bundle_admin_es5": "rollup --config --watch --environment NODE_ENV:development,APP:Admin_es5",
+    "serve:bundle_login_es2015": "rollup --config --watch --environment NODE_ENV:development,APP:Login_es2015",
+    "serve:bundle_login_es5": "rollup --config --watch --environment NODE_ENV:development,APP:Login_es5",
     "serve:bundle_polyfills_es2015": "rollup --config --watch --environment NODE_ENV:development,APP:Polyfills_es2015",
     "serve:bundle_polyfills_es5": "rollup --config --watch --environment NODE_ENV:development,APP:Polyfills_es5",
-    "serve": "concurrently \"npm run build:styles\" \"npm run build:scripts\" && concurrently --kill-others \"npm run serve:browser-sync\" \"npm run serve:styles\" \"npm run serve:scripts\" \"npm run serve:bundle_landing_es2015\"  \"npm run serve:bundle_landing_es5\" \"npm run serve:bundle_polyfills_es2015\" \"npm run serve:bundle_polyfills_es5\" \"npm run serve:bundle_cabinete_es2015\" \"npm run serve:bundle_cabinete_es5\" \"npm run serve:bundle_admin_es2015\" \"npm run serve:bundle_admin_es5\"",
+    "serve": "concurrently \"npm run build:styles\" \"npm run build:scripts\" && concurrently --kill-others \"npm run serve:browser-sync\" \"npm run serve:styles\" \"npm run serve:scripts\" \"npm run serve:bundle_landing_es2015\"  \"npm run serve:bundle_landing_es5\" \"npm run serve:bundle_polyfills_es2015\" \"npm run serve:bundle_polyfills_es5\" \"npm run serve:bundle_cabinete_es2015\" \"npm run serve:bundle_cabinete_es5\" \"npm run serve:bundle_admin_es2015\" \"npm run serve:bundle_admin_es5\" \"npm run serve:bundle_login_es2015\" \"npm run serve:bundle_login_es5\"",
     "build:static": "copyfiles -u 1 ./wwwrootsrc/**/*.{ico,svg,eot,ttf,woff,woff2,pdf,gif,webmanifest} ./wwwroot/",
     "build:images": "node ./buildscripts/min-images.js",
     "build:html": "html-minifier --input-dir ./wwwrootsrc/ --output-dir ./wwwroot/ --file-ext html --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --use-short-doctype --minify-css true --minify-js true && node ./buildscripts/set-html-timestmap.js",
@@ -112,9 +114,11 @@
     "build:bundle_cabinete_es5": "rollup --config --environment NODE_ENV:production,APP:Cabinet_es5",
     "build:bundle_admin_es2015": "rollup --config --environment NODE_ENV:production,APP:Admin_es2015",
     "build:bundle_admin_es5": "rollup --config --environment NODE_ENV:production,APP:Admin_es5",
+    "build:bundle_login_es2015": "rollup --config --environment NODE_ENV:production,APP:Login_es2015",
+    "build:bundle_login_es5": "rollup --config --environment NODE_ENV:production,APP:Login_es5",
     "build:bundle_polyfills_es2015": "rollup --config --environment NODE_ENV:production,APP:Polyfills_es2015",
     "build:bundle_polyfills_es5": "rollup --config --environment NODE_ENV:production,APP:Polyfills_es5",
-    "build": "rm -rvf wwwroot/ && rm -rvf wwwroot.tmp/ && concurrently \"npm run build:styles\" \"npm run build:scripts\" && concurrently \"npm run build:static\" \"npm run build:images\" \"npm run build:html\" \"npm run build:bundle_landing_es2015\" \"npm run build:bundle_landing_es5\" \"npm run build:bundle_polyfills_es2015\" \"npm run build:bundle_polyfills_es5\" \"npm run build:bundle_cabinete_es2015\" \"npm run build:bundle_cabinete_es5\" \"npm run build:bundle_admin_es2015\" \"npm run build:bundle_admin_es5\"",
+    "build": "rm -rvf wwwroot/ && rm -rvf wwwroot.tmp/ && concurrently \"npm run build:styles\" \"npm run build:scripts\" && concurrently \"npm run build:static\" \"npm run build:images\" \"npm run build:html\" \"npm run build:bundle_landing_es2015\" \"npm run build:bundle_landing_es5\" \"npm run build:bundle_polyfills_es2015\" \"npm run build:bundle_polyfills_es5\" \"npm run build:bundle_cabinete_es2015\" \"npm run build:bundle_cabinete_es5\" \"npm run build:bundle_admin_es2015\" \"npm run build:bundle_admin_es5\" \"npm run build:bundle_login_es2015\" \"npm run build:bundle_login_es5\"",
     "postinstall": "npm dedupe && npm prune",
     "pre-test": "concurrently \"npm run build:scripts\" \"npm run build:styles\""
   },
