--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -134,7 +134,7 @@
   "husky": {
     "hooks": {
       "commit-msg!": "node ./buildscripts/write-task-name.js",
-      "pre-commit": "lint-staged"
+      "pre-commit!": "lint-staged"
     }
   },
   "repository": {
