--- a/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
+++ b/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
@@ -9,7 +9,10 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
 
-        try_files $uri /index.html;
+        #add slashto folder patch 
+        rewrite ^([^.]*[^/])$ $1/ permanent;
+
+        try_files $uri $uri/index.html;
     }
 
     #error_page  404              /404.html;
