update nginx rule

--- a/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
+++ b/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
@@ -2,6 +2,9 @@ server {
     listen       32202;
     server_name  localhost;
 
+    # ignore port 3202 on redirect
+    port_in_redirect off;
+
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
