add gzip and limit requests

--- a/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
+++ b/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
@@ -1,3 +1,5 @@
+limit_req_zone $binary_remote_addr zone=sample_solution_requests:10m rate=10r/s;
+
 server {
     listen       32202;
     server_name  localhost;
@@ -7,6 +9,21 @@ server {
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
+
+    limit_req zone=sample_solution_requests burst=40 nodelay;
+
+    gzip  on;
+    gzip_disable "msie6";
+    gzip_types text/plain
+               text/css
+               application/json
+               application/x-javascript
+               text/xml
+               application/xml
+               application/xml+rss
+               text/javascript
+               application/javascript;
+    gzip_comp_level 5;
 
     location / {
         root   /usr/share/nginx/html;
