--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@labeg/alertify.js": "=2.0.41",
     "@labeg/webapp-core": "=0.1.58",
+    "@material-ui/core": "=4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "abortcontroller-polyfill": "=1.4.0",
     "class-validator": "=0.12.2",
     "classnames": "=2.2.6",
@@ -15,7 +17,6 @@
     "first-di": "=0.1.24",
     "gridlex": "=2.7.1",
     "imask": "=6.0.5",
-    "material-ui": "=0.20.2",
     "react": "=16.13.1",
     "react-dom": "=16.13.1",
     "react-router-dom": "=5.2.0",
@@ -45,7 +46,6 @@
     "@types/classnames": "=2.2.10",
     "@types/core-js": "=2.5.3",
     "@types/faker": "=4.1.12",
-    "@types/material-ui": "=0.21.7",
     "@types/mocha": "=7.0.2",
     "@types/react": "=16.9.36",
     "@types/react-dom": "=16.9.8",
