disable nginx locations

--- a/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
+++ b/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
@@ -26,18 +26,18 @@ server {
     gzip_comp_level 5;
 
     # files with extensions request
-    location ~ \.+$ {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
-    #subfolders request and files without extensions
-    location ~ ^/(.+)/ {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-
-        try_files $uri $1/index.html;
-    }
+#    location ~ \.+$ {
+#        root   /usr/share/nginx/html;
+#        index  index.html index.htm;
+#    }
+#
+#    #subfolders request and files without extensions
+#    location ~ ^/(.+)/ {
+#        root   /usr/share/nginx/html;
+#        index  index.html index.htm;
+#
+#        try_files $uri $1/index.html;
+#    }
 
     # any other request
     location / {
