--- a/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
+++ b/Clients/SampleSolution.Web/samplesolutionwebnginx.conf
@@ -30,7 +30,7 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
 
-        try_files $uri /$1/index.html;
+        try_files $uri /landing/$uri /$1/index.html;
     }
 
     # any other request
@@ -41,7 +41,7 @@ server {
         # add slash to folder patch 
         rewrite ^([^.]*[^/])$ $1/ permanent;
 
-        try_files $uri $uri/index.html;
+        try_files $uri /landing/$uri $uri/index.html;
     }
 
     #error_page  404              /404.html;
