--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "browserify-shim": {},
   "dependencies": {
+    "@labeg/alertify.js": "=2.0.42",
     "@labeg/webapp-core": "=0.1.59",
     "@material-ui/core": "=4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/icons": "=4.9.1",
     "abortcontroller-polyfill": "=1.4.0",
     "class-validator": "=0.12.2",
     "classnames": "=2.2.6",
