update to dotnet 5

--- a/Backends/SampleSolution.Backend/appsettings.json
+++ b/Backends/SampleSolution.Backend/appsettings.json
@@ -8,5 +8,12 @@
             "Default": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Smtp": {
+        "SendServer": "smtp.gmail.com",
+        "SendServerPort": 587,
+        "NoReplyEmail": "no-reply@example.com",
+        "NoReplyUseAuth": true,
+        "NoReplyPassword": "password"
+    }
 }
