fix dotnet build path

--- a/Backends/SampleSolution.Backend/Dockerfile
+++ b/Backends/SampleSolution.Backend/Dockerfile
@@ -5,5 +5,5 @@ ENV ASPNETCORE_URLS=http://0.0.0.0:32102
 EXPOSE 32102
 
 RUN ln -snf /usr/share/zoneinfo/Europe/Moscow /etc/localtime && echo Europe/Moscow > /etc/timezone
-COPY ${source:-bin/Release/netcoreapp5.0/publish} .
+COPY ${source:-bin/Release/net5.0/publish} .
 ENTRYPOINT ["dotnet", "SampleSolution.Backend.dll"]
