--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -52,7 +52,7 @@
     "husky": "=4.3.6",
     "lint-staged": "=10.5.3",
     "mocha": "=8.2.1",
-    "node-sass": "=5.0.0",
+    "node-sass": "=4.14.1",
     "postcss": "=8.2.1",
     "postcss-cli": "=8.3.1",
     "postcss-scss": "=3.0.4",
@@ -63,6 +63,7 @@
     "rollup-plugin-terser": "=7.0.2",
     "rollup-plugin-visualizer": "=4.2.0",
     "semver": "=7.3.4",
+    "sharp": "=0.27.0",
     "stylelint-scss": "=3.18.0",
     "ts-node": "=9.1.1",
     "typescript": "=4.1.3"
