--- a/Clients/SampleSolution.Web/package.json
+++ b/Clients/SampleSolution.Web/package.json
@@ -6,9 +6,67 @@
   "private": true,
   "browserify-shim": {},
   "dependencies": {
+    "@labeg/alertify.js": "=2.0.42",
+    "@labeg/webapp-core": "=0.1.61",
+    "@material-ui/core": "=4.11.2",
+    "@material-ui/icons": "=4.11.2",
+    "abortcontroller-polyfill": "=1.5.0",
+    "class-validator": "=0.12.2",
+    "classnames": "=2.2.6",
+    "core-js": "=3.8.1",
+    "first-di": "=0.1.29",
+    "gridlex": "=2.7.1",
+    "imask": "=6.0.5",
+    "react": "=17.0.1",
+    "react-dom": "=17.0.1",
+    "react-router-dom": "=5.2.0",
+    "react-virtualized": "=9.22.3",
+    "ts-serializable": "=2.0.25",
+    "tslib": "=2.0.3",
+    "whatwg-fetch": "=3.5.0"
   },
   "devDependencies": {
-    "sharp": "=0.27.0"
+    "@csstools/postcss-sass": "=4.0.0",
+    "@labeg/code-style": "=1.0.82",
+    "@rollup/plugin-babel": "=5.2.2",
+    "@rollup/plugin-commonjs": "=17.0.0",
+    "@rollup/plugin-node-resolve": "=11.0.1",
+    "@types/chai": "=4.2.14",
+    "@types/classnames": "=2.2.11",
+    "@types/core-js": "=2.5.4",
+    "@types/faker": "=5.1.5",
+    "@types/mocha": "=8.2.0",
+    "@types/react": "=17.0.0",
+    "@types/react-dom": "=17.0.0",
+    "@types/react-router-dom": "=5.1.6",
+    "autoprefixer": "=9.8.6",
+    "browser-sync": "=2.26.13",
+    "chai": "=4.2.0",
+    "concurrently": "=5.3.0",
+    "connect-history-api-fallback": "=1.6.0",
+    "copyfiles": "=2.4.1",
+    "cssnano": "=4.1.10",
+    "faker": "=5.1.0",
+    "html-minifier": "=4.0.0",
+    "http-proxy-middleware": "=1.0.6",
+    "husky": "=4.3.6",
+    "lint-staged": "=10.5.3",
+    "mocha": "=8.2.1",
+    "node-sass": "=4.14.1",
+    "postcss": "=8.2.1",
+    "postcss-cli": "=8.3.1",
+    "postcss-scss": "=3.0.4",
+    "replace-in-file": "=6.1.0",
+    "rollup": "=2.35.1",
+    "rollup-plugin-replace": "=2.2.0",
+    "rollup-plugin-string": "=3.0.0",
+    "rollup-plugin-terser": "=7.0.2",
+    "rollup-plugin-visualizer": "=4.2.0",
+    "semver": "=7.3.4",
+    "sharp": "=0.27.0",
+    "stylelint-scss": "=3.18.0",
+    "ts-node": "=9.1.1",
+    "typescript": "=4.1.3"
   },
   "scripts": {
     "packages:manupdate": "rm -rvf node_modules && npm install",
