--- a/Backends/SampleSolution.Backend/appsettings.json
+++ b/Backends/SampleSolution.Backend/appsettings.json
@@ -9,6 +9,7 @@
         }
     },
     "AllowedHosts": "*",
+    "Host": "127.0.0.1:30103",
     "Smtp": {
         "SendServer": "smtp.gmail.com",
         "SendServerPort": 587,
